AWS_VPC_EC2.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: 'This template deploys VPC with a single Public subnet'

Parameters:
 
  MyVPCName:
    Description: Enter the name of the VPC
    Type: String

  MyVPCCIDR:
    ConstraintDescription: CIDR block parameter must be in the form between /16 to /28 CIDR values
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    Default: 10.0.0.0/24
    Description: Enter the IP ranges with valid CIDR notation for the VPC
    Type: String  

  MyVPCTenancy:
    AllowedValues:
      - default
      - dedicated
    Default: default
    Description: Enter the Tenancy for the VPC
    Type: String

  MySubName:
    Description: Enter the name of the Subnet
    Type: String

  SubnetACIDR:
    Default: 10.0.0.0/24
    Description: Enter the IP ranges with valid CIDR notation for the public subnet
    Type: String

  SubnetAAvailabilityZone:
    AllowedValues: 
      - ap-south-1a
      - ap-south-1b
    Default:  ap-south-1a
    Description:  Select the Availabilty zone for Subnet
    Type: String

  MyRouteTableName:
    Description: Enter the name of the Route Table
    Type: String

  MyInternetGatewayName:
    Description: Enter the name of the Internet Gateway
    Type: String

  MySecurtityGroupName:
    Description: Enter the name of the Securtity Group
    Type: String

  EC2InstanceName:
    Description: Enter the name of EC2 instance
    Type: String
    
  InstanceAMIImage:
    Default: ami-0655793980c0bf43f
    Description: Select the AMI image for the Windows EC2 instance
    Type: String

  EC2InstanceType:
    AllowedValues: 
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
    Default: t2.micro
    Description: Select the EC2 instance type
    Type: String

  LoginKeyPair:
    Default: WinKey
    Description: Select from the existing keys for the EC2 instance
    Type: AWS::EC2::KeyPair::KeyName

  EIPName:
    Description: Enter the name of EIP to be attached to EC2 instance
    Type: String
    
Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref MyVPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: !Ref MyVPCTenancy
      Tags:
        - Key: Name
          Value: !Ref MyVPCName

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Ref SubnetAAvailabilityZone
      CidrBlock: !Ref SubnetACIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Ref MySubName

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Ref MyRouteTableName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Ref MyInternetGatewayName

  InternetRoute:
    Type: AWS::EC2::Route
    Properties:
       RouteTableId: !Ref RouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
       
  SubnetRouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        VpcId: !Ref VPC
        GroupDescription: Allow HTTPS connections for EC2 windows server
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        GroupDescription: Allow RDP connection to EC2 windows server
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        Tags:
        - Key: Name
          Value: !Ref MySecurtityGroupName

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 30
            VolumeType: gp2
            DeleteOnTermination: false
      AvailabilityZone: !Ref SubnetAAvailabilityZone
      ImageId: !Ref InstanceAMIImage
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: !Ref EC2InstanceType
      KeyName: !Ref LoginKeyPair
      SecurityGroupIds: 
        - Ref: EC2SecurityGroup
      SubnetId: !Ref Subnet
      Tags:
      - Key: Name
        Value: !Ref EC2InstanceName

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref EC2Instance
      Tags:
      - Key: Name
        Value: !Ref EIPName
    DependsOn: GatewayAttachment

  EIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt ElasticIP.AllocationId
